--- a/download.html
+++ b/download.html
@@ -93,162 +93,162 @@ here:</p>
 <tr class="odd">
 <td align="center">1.70</td>
 <td align="center">2021-11-25</td>
-<td align="center"><a href="download/stklos-1.70.tar.gz">stklos-1.70.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-1.70.tar.gz">stklos-1.70.tar.gz</a></td>
 </tr>
 <tr class="even">
 <td align="center">1.60</td>
 <td align="center">2021-02-15</td>
-<td align="center"><a href="download/stklos-1.60.tar.gz">stklos-1.60.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-1.60.tar.gz">stklos-1.60.tar.gz</a></td>
 </tr>
 <tr class="odd">
 <td align="center">1.50</td>
 <td align="center">2020-08-17</td>
-<td align="center"><a href="download/stklos-1.50.tar.gz">stklos-1.50.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-1.50.tar.gz">stklos-1.50.tar.gz</a></td>
 </tr>
 <tr class="even">
 <td align="center">1.40</td>
 <td align="center">2020-06-05</td>
-<td align="center"><a href="download/stklos-1.40.tar.gz">stklos-1.40.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-1.40.tar.gz">stklos-1.40.tar.gz</a></td>
 </tr>
 <tr class="odd">
 <td align="center">1.31</td>
 <td align="center">2019-07-13</td>
-<td align="center"><a href="download/stklos-1.31.tar.gz">stklos-1.31.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-1.31.tar.gz">stklos-1.31.tar.gz</a></td>
 </tr>
 <tr class="even">
 <td align="center">1.30</td>
 <td align="center">2019-07-04</td>
-<td align="center"><a href="download/stklos-1.30.tar.gz">stklos-1.30.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-1.30.tar.gz">stklos-1.30.tar.gz</a></td>
 </tr>
 <tr class="odd">
 <td align="center">1.20</td>
 <td align="center">2018-06-04</td>
-<td align="center"><a href="download/stklos-1.20.tar.gz">stklos-1.20.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-1.20.tar.gz">stklos-1.20.tar.gz</a></td>
 </tr>
 <tr class="even">
 <td align="center">1.10</td>
 <td align="center">2011-12-31</td>
-<td align="center"><a href="download/stklos-1.10.tar.gz">stklos-1.10.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-1.10.tar.gz">stklos-1.10.tar.gz</a></td>
 </tr>
 <tr class="odd">
 <td align="center">1.01</td>
 <td align="center">2010-12-30</td>
-<td align="center"><a href="download/stklos-1.01.tar.gz">stklos-1.01.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-1.01.tar.gz">stklos-1.01.tar.gz</a></td>
 </tr>
 <tr class="even">
 <td align="center">1.00</td>
 <td align="center">2010-08-11</td>
-<td align="center"><a href="download/stklos-1.00.tar.gz">stklos-1.00.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-1.00.tar.gz">stklos-1.00.tar.gz</a></td>
 </tr>
 <tr class="odd">
 <td align="center">0.98</td>
 <td align="center">2008-05-18</td>
-<td align="center"><a href="download/stklos-0.98.tar.gz">stklos-0.98.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-0.98.tar.gz">stklos-0.98.tar.gz</a></td>
 </tr>
 <tr class="even">
 <td align="center">0.97</td>
 <td align="center">2007-12-16</td>
-<td align="center"><a href="download/stklos-0.97.tar.gz">stklos-0.97.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-0.97.tar.gz">stklos-0.97.tar.gz</a></td>
 </tr>
 <tr class="odd">
 <td align="center">0.96</td>
 <td align="center">2007-06-30</td>
-<td align="center"><a href="download/stklos-0.96.tar.gz">stklos-0.96.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-0.96.tar.gz">stklos-0.96.tar.gz</a></td>
 </tr>
 <tr class="even">
 <td align="center">0.95</td>
 <td align="center">2007-06-08</td>
-<td align="center"><a href="download/stklos-0.95.tar.gz">stklos-0.95.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-0.95.tar.gz">stklos-0.95.tar.gz</a></td>
 </tr>
 <tr class="odd">
 <td align="center">0.82</td>
 <td align="center">2006-12-19</td>
-<td align="center"><a href="download/stklos-0.82.tar.gz">stklos-0.82.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-0.82.tar.gz">stklos-0.82.tar.gz</a></td>
 </tr>
 <tr class="even">
 <td align="center">0.81</td>
 <td align="center">2006-11-06</td>
-<td align="center"><a href="download/stklos-0.81.tar.gz">stklos-0.81.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-0.81.tar.gz">stklos-0.81.tar.gz</a></td>
 </tr>
 <tr class="odd">
 <td align="center">0.80</td>
 <td align="center">2006-10-28</td>
-<td align="center"><a href="download/stklos-0.80.tar.gz">stklos-0.80.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-0.80.tar.gz">stklos-0.80.tar.gz</a></td>
 </tr>
 <tr class="even">
 <td align="center">0.72</td>
 <td align="center">2006-01-04</td>
-<td align="center"><a href="download/stklos-0.72.tar.gz">stklos-0.72.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-0.72.tar.gz">stklos-0.72.tar.gz</a></td>
 </tr>
 <tr class="odd">
 <td align="center">0.71</td>
 <td align="center">2005-11-03</td>
-<td align="center"><a href="download/stklos-0.71.tar.gz">stklos-0.71.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-0.71.tar.gz">stklos-0.71.tar.gz</a></td>
 </tr>
 <tr class="even">
 <td align="center">0.70</td>
 <td align="center">2006-01-04</td>
-<td align="center"><a href="download/stklos-0.70.tar.gz">stklos-0.70.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-0.70.tar.gz">stklos-0.70.tar.gz</a></td>
 </tr>
 <tr class="odd">
 <td align="center">0.61</td>
 <td align="center">2005-04-05</td>
-<td align="center"><a href="download/stklos-0.61.tar.gz">stklos-0.61.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-0.61.tar.gz">stklos-0.61.tar.gz</a></td>
 </tr>
 <tr class="even">
 <td align="center">0.60</td>
 <td align="center">2004-11-30</td>
-<td align="center"><a href="download/stklos-0.60.tar.gz">stklos-0.60.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-0.60.tar.gz">stklos-0.60.tar.gz</a></td>
 </tr>
 <tr class="odd">
 <td align="center">0.59</td>
 <td align="center">2004-11-04</td>
-<td align="center"><a href="download/stklos-0.59.tar.gz">stklos-0.59.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-0.59.tar.gz">stklos-0.59.tar.gz</a></td>
 </tr>
 <tr class="even">
 <td align="center">0.58</td>
 <td align="center">2004-07-17</td>
-<td align="center"><a href="download/stklos-0.58.tar.gz">stklos-0.58.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-0.58.tar.gz">stklos-0.58.tar.gz</a></td>
 </tr>
 <tr class="odd">
 <td align="center">0.57</td>
 <td align="center">2004-01-14</td>
-<td align="center"><a href="download/stklos-0.57.tar.gz">stklos-0.57.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-0.57.tar.gz">stklos-0.57.tar.gz</a></td>
 </tr>
 <tr class="even">
 <td align="center">0.56</td>
 <td align="center">2003-11-06</td>
-<td align="center"><a href="download/stklos-0.56.tar.gz">stklos-0.56.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-0.56.tar.gz">stklos-0.56.tar.gz</a></td>
 </tr>
 <tr class="odd">
 <td align="center">0.55</td>
 <td align="center">2003-06-25</td>
-<td align="center"><a href="download/stklos-0.55.tar.gz">stklos-0.55.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-0.55.tar.gz">stklos-0.55.tar.gz</a></td>
 </tr>
 <tr class="even">
 <td align="center">0.54</td>
 <td align="center">2003-02-13</td>
-<td align="center"><a href="download/stklos-0.54.tar.gz">stklos-0.54.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-0.54.tar.gz">stklos-0.54.tar.gz</a></td>
 </tr>
 <tr class="odd">
 <td align="center">0.53</td>
 <td align="center">2002-08-06</td>
-<td align="center"><a href="download/stklos-0.53.tar.gz">stklos-0.53.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-0.53.tar.gz">stklos-0.53.tar.gz</a></td>
 </tr>
 <tr class="even">
 <td align="center">0.52</td>
 <td align="center">2002-04-09</td>
-<td align="center"><a href="download/stklos-0.52.tar.gz">stklos-0.52.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-0.52.tar.gz">stklos-0.52.tar.gz</a></td>
 </tr>
 <tr class="odd">
 <td align="center">0.51</td>
 <td align="center">2001-03-13</td>
-<td align="center"><a href="download/stklos-0.51.tar.gz">stklos-0.51.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-0.51.tar.gz">stklos-0.51.tar.gz</a></td>
 </tr>
 <tr class="even">
 <td align="center">0.50</td>
 <td align="center">2001-01-18</td>
-<td align="center"><a href="download/stklos-0.50.tar.gz">stklos-0.50.tar.gz</a></td>
+<td align="center"><a href="https://stklos.net/download/stklos-0.50.tar.gz">stklos-0.50.tar.gz</a></td>
 </tr>
 </tbody>
 </table></li>
