--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
 
 <!-- Local Variables: mode: "html" End: -->
 <h2 id="presentation">Presentation</h2>
-<p><strong><em>STklos</em></strong> is a free <a
-href="http://www.schemers.org">Scheme</a> system mostly compliant with
-the languages features defined in <a
+<p><strong><em>STklos</em></strong> (pronounced <a
+href="https://itinerarium.github.io/phoneme-synthesis/?w=ˈɛs.&#39;ti.kl&#39;ɔss">/ˈɛs.’ti.kl’ɔss/</a>)
+is a free <a href="http://www.schemers.org">Scheme</a> system mostly
+compliant with the language features defined in <a
 href="http://www.scheme-reports.org/2015/working-group-1.html">R⁷RS
 small</a>. The aim of this implementation is to be fast as well as
 light. The implementation is based on an ad-hoc <em>Virtual
@@ -78,8 +79,8 @@ href="https://en.wikipedia.org/wiki/Scheme_Requests_for_Implementation">SRFIs</a
 </ul>
 <h2 id="latest-news">Latest News</h2>
 <div class="news-main">
-<h2 id="version-2.00-released-2023-08-30">Version “2.00 released <span
-class="rdate">2023-08-30</span></h2>
+<h2 id="version-2.00-released-2023-09-12">Version “2.00 released <span
+class="rdate">2023-09-12</span></h2>
 <p>This is a major version of <strong><em>STklos</em></strong>, bringing
 it from R<sup>5</sup>RS to R<sup>7</sup>RS. It is the fruit of nearly
 two years of development with the help of the following persons (in
@@ -341,7 +342,7 @@ arguments</li>
      </article>
     <footer class="foot w3-container w3-tab w3-small w3-light-grey">
       <span class="w3-bar-item"><b>STklos</b></span>
-      <span class="w3-bar-item w3-right"><i>Updated:</i> 5-Jul-2023 19:37&nbsp;&nbsp;</span>
+      <span class="w3-bar-item w3-right"><i>Updated:</i> 5-Sep-2023 11:41&nbsp;&nbsp;</span>
     </footer>
   </body>
 </html>
