Applied patches of PR #2 from @jpellegrini

--- a/allnews.html
+++ b/allnews.html
@@ -63,7 +63,7 @@ class="citation" data-cites="Zambito1">@Zambito1</span></a>)</li>
 <p>The main changes in this version are:</p>
 <ul>
 <li>Support for R⁷RS libraries</li>
-<li>Macro system hash been rewritten</li>
+<li>Macro system has been rewritten</li>
 <li>Support for ScmPkg packages has been suppressed</li>
 <li>New options for the commands <em>stklos(1)</em> and
 <em>stklos-compile(1)</em></li>
@@ -78,7 +78,7 @@ file transfer library</em></li>
 <li>Better support for macOS</li>
 <li><code>describe</code> has been enhanced for some type of
 objects</li>
-<li>REPL has now tab completiongg</li>
+<li>REPL has now tab completion</li>
 <li>Bash and zsh completions for <code>stklos</code> and
 <code>stklos-compile</code> commands</li>
 <li>Better <code>SLIB</code> support</li>
@@ -99,7 +99,7 @@ objects</li>
 <li>SRFI-215: Central Log Exchange</li>
 <li>SRFI 217: Integer Sets</li>
 <li>SRFI 222: Compound objects</li>
-<li>SRFI 224: Integer Mappings - Scheme Requests for Implementation</li>
+<li>SRFI 224: Integer Mappings</li>
 <li>SRFI-227: Optional Arguments</li>
 <li>SRFI 228: Composing Comparators</li>
 <li>SRFI-229: Tagged Procedures</li>
@@ -1206,7 +1206,7 @@ class="rdate">2001-01-17</span></h2>
      </article>
     <footer class="foot w3-container w3-tab w3-small w3-light-grey">
       <span class="w3-bar-item"><b>STklos</b></span>
-      <span class="w3-bar-item w3-right"><i>Updated:</i> 11-Sep-2023 21:06&nbsp;&nbsp;</span>
+      <span class="w3-bar-item w3-right"><i>Updated:</i> 1-Oct-2023 19:41&nbsp;&nbsp;</span>
     </footer>
   </body>
 </html>
