--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ href="http://www.pcre.org">PCRE</a> package,</li>
 support,</li>
 <li>native threads built on top of <a
 href="https://en.wikipedia.org/w/index.php?title=Pthreads">Posix
-theads</a>,</li>
+threads</a>,</li>
 <li><a href="https://en.wikipedia.org/w/index.php?title=Tail_call">Tail
 Call Optimization</a>, as required by R⁷RS,</li>
 <li>Support for a large number of <a
@@ -79,7 +79,7 @@ href="https://en.wikipedia.org/wiki/Scheme_Requests_for_Implementation">SRFIs</a
 </ul>
 <h2 id="latest-news">Latest News</h2>
 <div class="news-main">
-<h2 id="version-2.00-released-2023-09-12">Version “2.00 released <span
+<h2 id="version-2.00-released-2023-09-12">Version “2.00” released <span
 class="rdate">2023-09-12</span></h2>
 <p>This is a major version of <strong><em>STklos</em></strong>, bringing
 it from R<sup>5</sup>RS to R<sup>7</sup>RS. It is the fruit of nearly
