--- a/allnews.html
+++ b/allnews.html
@@ -36,7 +36,7 @@
 
 
 <!-- Local Variables: mode: "html" End: -->
-<h2 id="version-2.00-released-2023-09-12">Version “2.00 released <span
+<h2 id="version-2.00-released-2023-09-12">Version “2.00” released <span
 class="rdate">2023-09-12</span></h2>
 <p>This is a major version of <strong><em>STklos</em></strong>, bringing
 it from R<sup>5</sup>RS to R<sup>7</sup>RS. It is the fruit of nearly
@@ -1206,7 +1206,7 @@ class="rdate">2001-01-17</span></h2>
      </article>
     <footer class="foot w3-container w3-tab w3-small w3-light-grey">
       <span class="w3-bar-item"><b>STklos</b></span>
-      <span class="w3-bar-item w3-right"><i>Updated:</i> 1-Oct-2023 19:41&nbsp;&nbsp;</span>
+      <span class="w3-bar-item w3-right"><i>Updated:</i> 23-Oct-2023 19:25&nbsp;&nbsp;</span>
     </footer>
   </body>
 </html>
