--- a/srfi.html
+++ b/srfi.html
@@ -63,11 +63,12 @@ href="http://srfi.schemers.org/srfi-faq.html">FAQ</a>.</p>
 <em>“final”</em> state. Any help on implementing SRFIs on
 <strong><em>STklos</em></strong> is welcome.</p>
 <h2 id="available-srfis">Available SRFIs</h2>
-<p>Here is the list of the <strong>122</strong> SRFIs which are
+<p>Here is the list of the <strong>125</strong> SRFIs which are
 available in the current <strong><em>STklos</em></strong> release:</p>
+<p>[mLoaded ‘~/.config/stklos/stklosrc’ [0m- <a
+href="http://srfi.schemers.org/srfi-0/srfi-0.html">SRFI-0</a> —
+<em>Feature-based conditional expansion construct</em></p>
 <ul>
-<li><a href="http://srfi.schemers.org/srfi-0/srfi-0.html">SRFI-0</a> —
-<em>Feature-based conditional expansion construct</em></li>
 <li><a href="http://srfi.schemers.org/srfi-1/srfi-1.html">SRFI-1</a> —
 <em>List Library</em></li>
 <li><a href="http://srfi.schemers.org/srfi-2/srfi-2.html">SRFI-2</a> —
@@ -194,6 +195,9 @@ href="http://srfi.schemers.org/srfi-112/srfi-112.html">SRFI-112</a> —
 href="http://srfi.schemers.org/srfi-113/srfi-113.html">SRFI-113</a> —
 <em>Sets and Bags</em></li>
 <li><a
+href="http://srfi.schemers.org/srfi-115/srfi-115.html">SRFI-115</a> —
+<em>Scheme Regular Expressions</em></li>
+<li><a
 href="http://srfi.schemers.org/srfi-116/srfi-116.html">SRFI-116</a> —
 <em>Immutable List Library</em></li>
 <li><a
@@ -293,6 +297,9 @@ href="http://srfi.schemers.org/srfi-175/srfi-175.html">SRFI-175</a> —
 href="http://srfi.schemers.org/srfi-176/srfi-176.html">SRFI-176</a> —
 <em>Version flag</em></li>
 <li><a
+href="http://srfi.schemers.org/srfi-178/srfi-178.html">SRFI-178</a> —
+<em>Bitvector library</em></li>
+<li><a
 href="http://srfi.schemers.org/srfi-180/srfi-180.html">SRFI-180</a> —
 <em>JSON</em></li>
 <li><a
@@ -361,6 +368,9 @@ href="http://srfi.schemers.org/srfi-229/srfi-229.html">SRFI-229</a> —
 <li><a
 href="http://srfi.schemers.org/srfi-230/srfi-230.html">SRFI-230</a> —
 <em>Atomic Operations</em></li>
+<li><a
+href="http://srfi.schemers.org/srfi-232/srfi-232.html">SRFI-232</a> —
+<em>Flexible Curried Procedures</em></li>
 <li><a
 href="http://srfi.schemers.org/srfi-233/srfi-233.html">SRFI-233</a> —
 <em>INI files</em></li>
