Fix small glitch when generating the SRFI list
Thanks for @jpellegrini for signaling it in Issue #4

--- a/srfi.html
+++ b/srfi.html
@@ -65,10 +65,9 @@ href="http://srfi.schemers.org/srfi-faq.html">FAQ</a>.</p>
 <h2 id="available-srfis">Available SRFIs</h2>
 <p>Here is the list of the <strong>125</strong> SRFIs which are
 available in the current <strong><em>STklos</em></strong> release:</p>
-<p>[mLoaded ‘~/.config/stklos/stklosrc’ [0m- <a
-href="http://srfi.schemers.org/srfi-0/srfi-0.html">SRFI-0</a> —
-<em>Feature-based conditional expansion construct</em></p>
 <ul>
+<li><a href="http://srfi.schemers.org/srfi-0/srfi-0.html">SRFI-0</a> —
+<em>Feature-based conditional expansion construct</em></li>
 <li><a href="http://srfi.schemers.org/srfi-1/srfi-1.html">SRFI-1</a> —
 <em>List Library</em></li>
 <li><a href="http://srfi.schemers.org/srfi-2/srfi-2.html">SRFI-2</a> —
@@ -375,6 +374,9 @@ href="http://srfi.schemers.org/srfi-232/srfi-232.html">SRFI-232</a> —
 href="http://srfi.schemers.org/srfi-233/srfi-233.html">SRFI-233</a> —
 <em>INI files</em></li>
 <li><a
+href="http://srfi.schemers.org/srfi-234/srfi-234.html">SRFI-234</a> —
+<em>Topological sorting</em></li>
+<li><a
 href="http://srfi.schemers.org/srfi-235/srfi-235.html">SRFI-235</a> —
 <em>Combinators</em></li>
 <li><a
@@ -390,7 +392,7 @@ href="http://srfi.schemers.org/srfi-244/srfi-244.html">SRFI-244</a> —
      </article>
     <footer class="foot w3-container w3-tab w3-small w3-light-grey">
       <span class="w3-bar-item"><b>STklos</b></span>
-      <span class="w3-bar-item w3-right"><i>Updated:</i> 5-Jul-2023 19:38&nbsp;&nbsp;</span>
+      <span class="w3-bar-item w3-right"><i>Updated:</i> 14-Oct-2024 15:44&nbsp;&nbsp;</span>
     </footer>
   </body>
 </html>
